# Mapear-RN

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  Makefile  README.md  README.pt.md  pyproject.toml
.github/: CODEOWNERS
apps/dashboard/: .gcloudignore  Dockerfile  Makefile  README.md  pyproject.toml
apps/dashboard/api/: .env.example  bq.py  main.py  requirements.txt
apps/dashboard/api/routers/: alerts.py  candidates.py  coverage.py  narratives.py  overview.py  trends.py
apps/dashboard/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/dashboard/frontend/src/: App.tsx  index.css  main.tsx
apps/dashboard/frontend/src/api/: client.ts
apps/dashboard/frontend/src/components/: ElectoralBadge.tsx  Layout.tsx  SentimentBar.tsx  Sidebar.tsx  StatCard.tsx
apps/dashboard/frontend/src/context/: FilterContext.tsx
apps/dashboard/frontend/src/pages/: Alerts.tsx  Candidates.tsx  Coverage.tsx  Narratives.tsx  Overview.tsx  Trends.tsx
apps/dashboard/frontend/src/types/: index.ts
libs/mapear-domain/: README.md  pyproject.toml
libs/mapear-domain/src/mapear_domain/: __init__.py  region.py  rn_entities.py  targets.py
libs/mapear-domain/tests/: test_author_resolver.py  test_bq_codegen.py  test_region.py  test_targets.py
libs/mapear-infra/: README.md  pyproject.toml
libs/mapear-infra/src/mapear_infra/: __init__.py  audit.py  cache.py  circuit_breaker.py  config.py  logging.py  metrics.py  notifier.py  privacy.py  quality.py  quality_report.py  retry.py  tracing.py  watermark.py
libs/mapear-infra/tests/: test_alert_config.py  test_alert_notifier.py  test_audit.py  test_cib_config.py  test_embeddings_config.py  test_llm_config.py  test_privacy.py  test_shadow_config.py
libs/mapear-mlops/: README.md  pyproject.toml
libs/mapear-mlops/src/mapear_mlops/: __init__.py  tracking.py
libs/mapear-mlops/tests/unit/: test_tracking.py
libs/mapear-nlp/: README.md  pyproject.toml
libs/mapear-nlp/eval/: author_resolution_gold_set.csv  author_resolution_run.py  cluster_run.py  coactivation_gold_set.csv  coactivation_run.py  community_gold_set.csv  community_run.py  gold_set.csv  narrative_cluster_gold_set.csv  narrative_gold_set.csv  narrative_run.py  run.py  shadow.py  stance_gold_set.csv  stance_run.py
libs/mapear-nlp/eval/candidates/: relaxed_warning.yaml  tightened_alert.yaml
libs/mapear-nlp/eval/prompts/: endorsement_v1.txt  narrative_v1.txt  stance_v1.txt
libs/mapear-nlp/src/mapear_nlp/: __init__.py  deterministic_entity_linker.py  language_detector.py  mayor_endorsement_detector.py  narrative_cache.py  narrative_explainer.py  ner.py  ner_postprocessing.py  ner_stoplist.yaml  political_sentiment.py  run_mayor_endorsement_detection.py  run_stance_classification.py  sentiment.py  stance_classifier.py  topic_modeling.py  trend_scorer.py
libs/mapear-nlp/tests/: test_author_resolution_job.py  test_cluster_tracker.py  test_coactivation.py  test_community.py  test_embedding_cache.py  test_narrative_clustering.py  test_narrative_clustering_job.py  test_narrative_explainer.py  test_rag_generator.py  test_rag_retriever.py  test_rag_run.py  test_region_matcher.py  test_region_matcher_golden.py  test_scoring.py  test_shadow.py  test_shadow_scorer.py  test_social_embedding_job.py  test_stance_classification_job.py  test_stance_classifier.py  test_topic_modeling.py
libs/mapear-storage/: README.md  pyproject.toml
libs/mapear-storage/src/mapear_storage/: __init__.py  contracts.py  pubsub_publisher.py
libs/mapear-storage/tests/: test_arrow_codegen.py  test_bq_schema_drift.py  test_iceberg_writer.py  test_pubsub_publisher.py
pipelines/mapear-rss/: Dockerfile  README.md  pyproject.toml
pipelines/mapear-rss/scripts/: backfill.py  backfill_political_sentiment.py  bootstrap_gcp.sh  init_db.sql  seed_feeds.py
pipelines/mapear-rss/src/mapear_rss/: __init__.py  __main__.py  config.py  pipeline.py  reach_signals.py
pipelines/mapear-rss/tests/: conftest.py
pipelines/mapear-rss/tests/integration/: test_pipeline_local.py
pipelines/mapear-rss/tests/resilience/: test_pg_timeout.py  test_redis_down.py
pipelines/mapear-rss/tests/unit/: test_article_parser.py  test_block_detector.py  test_browser_scraper.py  test_circuit_breaker.py  test_cleaner.py  test_config.py  test_content_cache.py  test_content_hasher.py  test_deduplicator.py  test_diagnostics.py  test_diversity_scorer.py  test_domain_cooldown.py  test_feed_health.py  test_pipeline.py  test_pipeline_political_sentiment.py  test_reach_signals.py  test_rn_entities.py  test_rn_filter.py  test_rss_reader.py  test_scraper.py  test_sentiment.py  test_sitemap_extractor.py  test_topic_modeling.py  test_trend_scorer.py  test_url_canonicalizer.py  test_url_frontier.py  test_user_agents.py  test_validators.py
pipelines/mapear-social/: Dockerfile  README.md  pyproject.toml
pipelines/mapear-social/src/mapear_social/: __init__.py  __main__.py  apify_client.py  coactivation.py  config.py  contracts.py  models.py  parallel.py  parquet_schemas.py  pipeline.py
pipelines/mapear-social/tests/: conftest.py
pipelines/mapear-social/tests/integration/: test_temporal_governance.py
pipelines/mapear-social/tests/unit/: test_adapters.py  test_apify_client.py  test_coactivation_fanout.py  test_parallel.py  test_pipeline_helpers.py  test_quality_critical_fields.py  test_social_codegen.py
services/alert-runner/: Dockerfile  pyproject.toml  run_alerts.py  test_run_alerts.py
services/dbt-runner/: Dockerfile  pyproject.toml  run.sh
services/embed-social-runner/: Dockerfile  orchestrate.py  pyproject.toml  run.sh  test_orchestrate.py
services/freshness-emitter/: Dockerfile  main.py  pyproject.toml  test_tracked_tables.py
services/freshness-emitter/manual_tests/: level2_staleness.py
services/graph-runner/: Dockerfile  orchestrate.py  pyproject.toml  run.sh  test_orchestrate.py
services/nlp-runner/: Dockerfile  orchestrate.py  pyproject.toml  run.sh  test_orchestrate.py
services/streaming-consumer/: Dockerfile  main.py  processor.py  pyproject.toml  test_streaming_consumer.py
(+273 files in other folders)
