# Mapear-RN — raiz do monorepo (uv workspace).
# Este projeto é "virtual": orquestra o workspace, não é um pacote distribuível.
[project]
name = "mapear-rn"
version = "0.0.0"
description = "Mapear-RN — workspace root for the data pipeline monorepo"
requires-python = ">=3.11,<3.13"

[tool.uv]
package = false

[tool.uv.workspace]
# libs/      — bibliotecas importáveis em camadas (domain, infra, nlp, storage, mlops)
# pipelines/ — aplicações batch ETL (mapear-rss, mapear-social)
# services/  — jobs/serviços Cloud Run (adicionados na Fase 3)
# apps/      — dashboard e afins (adicionado na Fase 5)
members = ["libs/*", "pipelines/*", "services/*", "apps/*"]

# Ferramental de desenvolvimento compartilhado por todo o workspace.
# Um único .venv serve todos os membros; `uv run pytest` usa estas versões.
[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-asyncio>=0.24,<0.25",
    "respx>=0.21,<0.22",
    "black>=24.8,<25.0",
    "ruff>=0.6,<0.7",
    "mypy>=1.11,<2.0",
    "sqlfluff>=3.1,<4.0",
    "pre-commit>=3.8,<4.0",
    "import-linter>=2.0,<3.0",
]

# import-linter — enforce layered architecture across the workspace.
# Layers: domain ◄ infra ◄ {storage, nlp, mlops} ◄ {pipelines, services, apps}.
# Run locally with: uv run --no-sync lint-imports
[tool.importlinter]
root_packages = [
    "mapear_domain",
    "mapear_infra",
    "mapear_storage",
    "mapear_nlp",
    "mapear_mlops",
    "mapear_rss",
    "mapear_social",
]

[[tool.importlinter.contracts]]
name = "Library layers"
type = "layers"
layers = [
    "mapear_rss | mapear_social",
    "mapear_storage | mapear_nlp | mapear_mlops",
    "mapear_infra",
    "mapear_domain",
]

[[tool.importlinter.contracts]]
name = "Sibling libs independence (storage, nlp, mlops)"
type = "independence"
modules = [
    "mapear_storage",
    "mapear_nlp",
    "mapear_mlops",
]
