# Dashboard — virtual workspace member (an application, not a library).
# FastAPI backend served alongside the React/Vite SPA build.
[project]
name = "mapear-dashboard"
version = "0.1.0"
description = "Mapear-RN — FastAPI backend + React SPA serving BigQuery marts"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "google-cloud-bigquery>=3.17,<4.0",
    "pandas>=2.0,<3.0",
    "cachetools>=5.3,<6.0",
    "db-dtypes>=1.2,<2.0",
    "anthropic>=0.39",
    "sentence-transformers>=3.1,<4.0",
]

[tool.uv]
package = false
