[project]
name = "mapear-domain"
version = "0.1.0"
description = "Domain models, schemas, and entity resolution for Mapear-RN"
authors = [{name = "your-organization"}]
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.9,<3.0",
    "loguru>=0.7,<0.8",
    "pyyaml>=6.0,<7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mapear_domain"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/test_region.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mapear_domain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
