[project]
name = "mapear-mlops"
version = "0.1.0"
description = "MLOps utilities for Mapear-RN — MLflow tracking wrapper for the eval harness"
authors = [{name = "your-organization"}]
requires-python = ">=3.11,<3.13"
dependencies = [
    # mlflow-skinny ships the tracking client without SQL backends, model
    # serving, or the artifact server — enough for file-store logging and
    # `mlflow ui` against ./mlruns. Saves ~80MB of transitive deps.
    "mlflow-skinny>=2.16,<3.0",
    "loguru>=0.7,<0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mapear_mlops"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
