[project]
name = "mapear-storage"
version = "0.1.0"
description = "Storage backends: data lake writers and warehouse loaders"
authors = [{name = "your-organization"}]
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.2,<3.0",
    "pyarrow>=17.0,<18.0",
    "pydantic>=2.9,<3.0",
    "loguru>=0.7,<0.8",
    "sqlalchemy>=2.0,<3.0",
    "mapear-domain",
    "mapear-infra",
]

[project.optional-dependencies]
gcp = [
    "google-cloud-bigquery>=3.25,<4.0",
    "google-cloud-storage>=2.18,<3.0",
]
local = ["duckdb"]
# pyiceberg[gcsfs] adds the GCS filesystem driver. The Poetry config
# spelled this extra `gcs` (a silent no-op — pyiceberg has no `gcs`
# extra); the correct name is `gcsfs`.
# Pin to 0.8.x — the 0.8 line stabilised the SqlCatalog + GCS path.
iceberg = ["pyiceberg[gcsfs,sql-sqlite]>=0.8,<0.9"]

[tool.uv.sources]
mapear-domain = {workspace = true}
mapear-infra = {workspace = true}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mapear_storage"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["mapear_storage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
