[project]
name = "mapear-rss"
version = "0.1.0"
description = "Pipeline de dados para monitoramento de notícias sociopolíticas do Rio Grande do Norte"
authors = [{name = "your-organization"}]
requires-python = ">=3.11,<3.13"
dependencies = [
    "mapear-domain",
    "mapear-infra",
    "mapear-nlp[llm]",
    "mapear-storage[iceberg]",
    # RSS / HTTP (RSS-specific)
    "feedparser>=6.0,<7.0",
    "httpx>=0.27,<0.28",
    "trafilatura==1.8.1",
    "lxml>=4.9",
    "readability-lxml>=0.8.1,<0.9",
    "beautifulsoup4>=4.12,<5.0",
    # dbt (shared but needed for local pipeline)
    "dbt-core==1.11.8",
    "dbt-duckdb==1.10.1",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7,<4.0",
    "transformers>=4.44,<5.0",
    "torch>=2.4,<3.0",
    "bertopic>=0.16,<0.17",
]
gcp = [
    "dbt-bigquery==1.11.1",
    "google-cloud-storage>=2.18,<3.0",
    "google-cloud-bigquery>=3.25,<4.0",
    "google-cloud-language>=2.13,<3.0",
]
quality = ["great-expectations>=1.0,<2.0"]
# Playwright is only installed on Cloud Run workers that need the
# headless-render fallback for the 5 anti-bot protected RN portals.
# After install you must also run `playwright install firefox --with-deps`
# once to fetch the Firefox binary. Enable with SCRAPER_PLAYWRIGHT_ENABLED=true.
browser = [
    "playwright>=1.45,<2.0",
    "playwright-stealth>=1.0.6",
]

[tool.uv.sources]
mapear-domain = {workspace = true}
mapear-infra = {workspace = true}
mapear-nlp = {workspace = true}
mapear-storage = {workspace = true}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mapear_rss"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"scripts/seed_feeds.py" = [
    "E501",  # SQL DDL inline in triple-quoted strings; wrapping obscures schema intent
]

[tool.ruff.lint.isort]
known-first-party = ["mapear_rss", "mapear_domain", "mapear_infra", "mapear_nlp", "mapear_storage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/mapear_rss --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
