[project]
name = "mapear-social"
version = "0.1.0"
description = "Pipeline de dados para Facebook/Instagram/X via Apify — monitoramento eleitoral RN"
authors = [{name = "your-organization"}]
requires-python = ">=3.11,<3.13"
dependencies = [
    "mapear-domain",
    "mapear-infra",
    "mapear-nlp[llm]",
    "mapear-storage",
    # HTTP client for Apify REST API v2
    "httpx>=0.27,<0.28",
    # dbt (para build local quando necessário)
    "dbt-core==1.11.8",
    "dbt-duckdb==1.10.1",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7,<4.0",
    "transformers>=4.44,<5.0",
    "torch>=2.4,<3.0",
    "langdetect>=1.0,<2.0",
]
gcp = [
    "dbt-bigquery==1.11.1",
    "google-cloud-storage>=2.18,<3.0",
    "google-cloud-bigquery>=3.25,<4.0",
    "google-cloud-language>=2.13,<3.0",
]

[tool.uv.sources]
mapear-domain = {workspace = true}
mapear-infra = {workspace = true}
mapear-nlp = {workspace = true}
mapear-storage = {workspace = true}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mapear_social"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["mapear_social", "mapear_domain", "mapear_infra", "mapear_nlp", "mapear_storage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/mapear_social --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
